--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,16 @@
 @import "./__logo/header__logo.css";
-@import './__lang-link/header__lang-link.css';
-@import './__links-container/header__links-container.css';
-@import './__links-list/header__links-list.css';
-@import './__link-item/header__link-item.css';
-@import './__lang-link/_active/header__lang-link_active.css';
+@import "./__lang-link/header__lang-link.css";
+@import "./__links-container/header__links-container.css";
+@import "./__links-list/header__links-list.css";
+@import "./__link-item/header__link-item.css";
+@import "./__lang-link/_active/header__lang-link_active.css";
 
 .header {
   max-width: 1184px;
+  display: -webkit-box;
   display: flex;
+  -webkit-box-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: end;
   align-items: flex-end;
 }
