--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,7 +2,9 @@
 @import './__subtitle/lead__subtitle.css';
 @import './__image/lead__image.css';
 @import './__caption/lead__caption.css';
+@import './__figure/lead__figure.css';
 
 .lead {
   max-width: 984px;
 }
+
