--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -7,6 +7,8 @@
   letter-spacing: 0.15em;
   text-transform: uppercase;
   color: #ffffff;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
   max-width: fit-content;
   padding-top: 4px;
 }
