--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -14,6 +14,9 @@
   .lead__title {
     font-size: 40px;
     line-height: 44px;
+    max-width: -webkit-min-content;
+    max-width: -moz-min-content;
     max-width: min-content;
   }
 }
+
