--- a/pages/index.css
+++ b/pages/index.css
@@ -3,3 +3,10 @@
 @import "../blocks/page/page.css";
 @import "../blocks/header/header.css";
 @import "../blocks/lead/lead.css";
+@import "../blocks/intro/intro.css";
+@import "../blocks/photo-grid/photo-grid.css";
+@import "../blocks/places/places.css";
+@import "../blocks/place/place.css";
+@import "../blocks/cover/cover.css";
+@import "../blocks/footer/footer.css";
+
