--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,10 +2,10 @@
 @import "./__title/cover__title.css";
 @import "./__image/cover__image.css";
 @import "./__subtitle/cover__subtitle.css";
-@import "./__text/cover__text.css";
+@import "./__list-item/cover__list-item.css";
 
 .cover {
   max-width: 1184px;
-  display: -webkit-box;
-  display: flex;
+  padding: 0;
 }
+
