--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,5 @@
 .cover__subtitle {
-  font-family: Inter;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -9,6 +9,7 @@
   max-width: 360px;
   padding-top: 32px;
   margin: 0 auto;
+  z-index: 1;
 }
 
 @media screen and (max-width: 767px) {
@@ -19,4 +20,5 @@
     max-width: 270px;
   }
 }
+
 
