--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,28 +1,31 @@
 @import "./__item/photo-grid__item.css";
+@import "./__list-item/photo-grid__list-item.css";
 
 .photo-grid {
   max-width: 1184px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-  grid-auto-rows: minmax(213px, auto);
+  grid-auto-rows: 213px;
   grid-gap: 16px;
+  list-style: none;
 }
 
 @media screen and (max-width: 1279px) {
   .photo-grid {
-    grid-auto-rows: minmax(225px, auto);
+    grid-auto-rows: 225px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .photo-grid {
-    grid-auto-rows: minmax(264px, auto);
+    grid-auto-rows: 264px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .photo-grid {
-    grid-auto-rows: minmax(216px, auto);
+    grid-auto-rows: 216px;
     grid-gap: 12px;
   }
 }
+
