--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,15 +1,16 @@
 .place__paragraph {
-  font-family: Inter, sans-serif;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 30px;
   color: #ffffff;
   margin: 0;
+  padding-top: 24px;
 }
 
-.place__paragraph:nth-of-type(2) {
-  padding-top: 24px;
+.place__paragraph:nth-of-type(1) {
+  padding-top: 0;
 }
 
 @media screen and (max-width: 1023px) {
@@ -19,10 +20,11 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 611px) {
   .place__paragraph {
     padding: 0 16px 0;
   }
 }
+
 
 
