--- a/pages/en.css
+++ b/pages/en.css
@@ -9,3 +9,4 @@
 @import "../blocks/place/place.css";
 @import "../blocks/cover/cover.css";
 @import "../blocks/footer/footer.css";
+@import "../blocks/logo/logo.css";
