--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,11 +1,10 @@
 @import "./__link/cover__link.css";
 @import "./__title/cover__title.css";
-@import "./__image/cover__image.css";
 @import "./__subtitle/cover__subtitle.css";
 @import "./__list-item/cover__list-item.css";
+@import "./__list/cover__list.css";
 
 .cover {
   max-width: 1184px;
-  padding: 0;
 }
 
