--- a/blocks/cover/__list-item/cover__list-item.css
+++ b/blocks/cover/__list-item/cover__list-item.css
@@ -1,32 +1,33 @@
 .cover__list-item {
-  width: 100%;
+  display: -webkit-box;
   display: flex;
+  -webkit-box-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
   align-items: center;
-  height: 740px;
+  min-height: 740px;
 }
 
 @media screen and (max-width: 1279px) {
   .cover__list-item {
-    height: 640px;
+    min-height: 640px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .cover__list-item {
-    height: 480px;
+    min-height: 480px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .cover__list-item {
-    height: 300px;
+    min-height: 300px;
   }
 }
 
 @media screen and (max-width: 450px) {
   .cover__list-item {
-    height: 200px;
+    min-height: 200px;
   }
 }
-
