--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,31 +1,10 @@
 @import "./__item/photo-grid__item.css";
 @import "./__list-item/photo-grid__list-item.css";
+@import "./__list/photo-grid__list.css";
 
 .photo-grid {
   max-width: 1184px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-  grid-auto-rows: 213px;
-  grid-gap: 16px;
-  list-style: none;
 }
 
-@media screen and (max-width: 1279px) {
-  .photo-grid {
-    grid-auto-rows: 225px;
-  }
-}
 
-@media screen and (max-width: 1023px) {
-  .photo-grid {
-    grid-auto-rows: 264px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .photo-grid {
-    grid-auto-rows: 216px;
-    grid-gap: 12px;
-  }
-}
 
