--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -22,9 +22,10 @@
 
 @media screen and (max-width: 611px) {
   .place__paragraph {
-    padding: 0 16px 0;
+    padding: 24px 16px 0;
   }
 }
+
 
 
 
